fix race condition on image loading & layout; slightly expand image width on mobile

--- a/src/index.less
+++ b/src/index.less
@@ -172,7 +172,7 @@ body {
         }
 
         > img {
-            width: 90%;
+            width: 92%;
             shape-outside: unset;
             margin: 0!important;
             padding: 30px 10px;
